Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107139

Webassembly cannot input Chinese

XMLWordPrintable

    • WebAssembly
    • 49ddb4b28 (dev), 72d156f77 (6.5), c844a7a54 (dev), 8d41b5a77 (6.8), 9f9c89652 (6.7)
    • G&UI Finishing 2023

      I had asked the below question in forum few months ago, about cannot input Chinese in webassembly.

      [Two major problem that prevent QT webassembly used in real project. | Qt Forum|https://forum.qt.io/topic/137581/two-major-problem-that-prevent-qt-webassembly-used-in-real-project/2]

      and was told such issue may be solved in 6.4.  and then I continue finish other part of my project.

      But when 6.4 released and I try it again, I found that issue still exists, and even worse.  In 6.3 I cannot input Chinese words into QLineEdit component, but I can paste the Chinese words into it.  In 6.4, paste doesn't work.

      My test project is simple, just drag a line edit into main window. and build and run.  Windows simplified Chinese environment.  Input English in line edit is ok, but no effect when input Chinese with Microsoft input method.

      I try paste with two results.  In original wasm_32, It can paste into line edit, but display wrong (two block).  In my build with asyncify support, the paste action doesn't work totally.

      This issue is fatal to a real project.

       

        1. ChineseInputTest.zip
          28.43 MB
        2. image-2023-05-03-10-49-50-508.png
          image-2023-05-03-10-49-50-508.png
          4 kB
        3. image-2023-05-03-10-50-37-092.png
          image-2023-05-03-10-50-37-092.png
          16 kB
        4. IMG_6590.jpeg
          IMG_6590.jpeg
          2.83 MB
        5. GIF 13-04-2023 12-49-31.gif
          GIF 13-04-2023 12-49-31.gif
          563 kB
        6. wasminput-qt6.5.tgz
          7 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            inho Inho Lee
            zhong_wenqing wenqing zhong
            Votes:
            8 Vote for this issue
            Watchers:
            17 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes